Changes on Sign Up, Recommendation and Login.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
         <!-- Recommendation Activity -->
         <activity
             android:name=".RecommendationActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="false" />
 
         <!-- Legacy Main Activity (for backward compatibility) -->
