Add Firebase Cloud Messaging (FCM) for push notifications - Update build.gradle with Firebase dependencies and Google Services plugin - Add MyFirebaseMessagingService to handle FCM messages - Update ApiService with FCM token registration endpoint - Update MainNavActivity to register FCM tokens on login - Add SessionManager methods for FCM token management - Update .gitignore to exclude google-services.json

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,6 +84,15 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
+        <!-- Firebase Cloud Messaging Service -->
+        <service
+            android:name=".utils.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <receiver android:name=".utils.DownloadReceiver" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
